--- a/src/pgdswd/lingerie/html/LingerieCSS.css
+++ b/src/pgdswd/lingerie/html/LingerieCSS.css
@@ -1,11 +1,6 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
 /* 
     Created on : 08 May 2018, 10:52:35 AM
-    Author     : pgd-swd
+    Author     : matjele7@gmail.com
 */
 body{
     background-image: url("../images/lingerie_004691.png");
